# mlflow-project

./: docker-compose.yml  pyproject.toml
docker/mlflow/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/serving/: Dockerfile  entrypoint.sh
scripts/: prepare_data.py  train_model.py
